support java 8 + enhance file selection